Fix alignment for money dashboard

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,7 @@ body {
 
 h3 {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .login-button {
@@ -222,12 +223,25 @@ section {
   flex-direction: row;
   justify-content: space-around;
   width: 60%;
+  height: 80%;
 }
 
 .plane, 
 .money, 
 .home {
-  width: 10%;
+  width: 45%;
+  height: 45%;
+}
+
+.icon-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+p {
+  margin-bottom: 0; 
 }
 
 footer {
